Fix Java 11 compilation error by replacing Stream.toList()